@@ -199,9 +199,6 @@ struct connection *find_attach_connection(struct connection *c);
 void attach_after_play_server(struct connection *c,
                               struct linked_server *ls);
 
-void
-attach_after_play_character(struct linked_server *ls);
-
 /* command */
 
 void
